Readability fix. Made text 16px min

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -14,8 +14,9 @@
  * limitations under the License.
  */
 
-html, body {
+html, body, p {
   font-family: 'Roboto', 'Helvetica', sans-serif;
+  font-size: 16px;
 }
 a {
   text-decoration: underline;
@@ -778,7 +779,7 @@ a {
   margin-left: 10px;
   margin-right: 10px;
   color: #555;
-  padding: 10px;
+  padding: 15px;
   max-width: 620px;
   box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
 }
@@ -795,7 +796,7 @@ a {
   height: auto;
 }
 .fp-note .mdl-checkbox__label {
-  font-size: 14px;
+  font-size: 16px;
 }
 .fp-help {
   margin-left: auto;
@@ -929,6 +930,9 @@ a {
   right: 5%;
   top: 10%;
   bottom: 10%;
+}
+.fp-view-posts-button {
+  margin-bottom: 20px;
 }
 
 /* Firebase UI MDL fixes */
